# Cachink

./: .gitignore  ARCHITECTURE.md  AUDIT-M1-STEP0-FINDINGS.md  AUDIT-ROUND-2.md  CLAUDE.md  README.md  ROADMAP-archive.md  ROADMAP.md  SCAFFOLD-STATUS.md  eslint.config.js  health-report-2026-04-30.md  package.json  pnpm-lock.yaml  prettier.config.js  renovate.json  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
.husky/: pre-push
apps/desktop/: SETUP.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/playwright/: cloud-role-windowing.spec.ts  lan-conflict.spec.ts  lan-offline-replay.spec.ts  lan-sync.spec.ts  wizard-lan-server.spec.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/lan_sync/: mod.rs  protocol.rs  qr.rs  routes.rs  sqlite.rs  state.rs
apps/desktop/src/app/: desktop-router-context.tsx  desktop-router.tsx  main.tsx  placeholder-screen.tsx
apps/desktop/src/shell/: cloud-navigation.tsx  desktop-app-shell-wrapper.tsx  i18n.ts  lan-host-bridge.ts  load-cloud-db.ts  tamagui-provider.tsx  use-cloud-bridges.ts  use-cloud-handle.ts  use-lan-bridges.ts  use-update-adapter.ts
apps/desktop/tests/shell/: use-cloud-handle.test.ts  use-update-adapter.test.ts
apps/mobile/: SETUP.md  app.json  eas.json  metro.config.js  package.json  tsconfig.json  vitest.config.ts
apps/mobile/maestro/: .maestro-config.yaml  README.md
apps/mobile/maestro/flows/: a11y-smoke.yaml  cliente-crear.yaml  cliente-pago-completo.yaml  cliente-pago-parcial.yaml  cloud-offline-replay.yaml  cloud-signin-bootstrap.yaml  cloud-signup-signin.yaml  corte-con-diferencia.yaml  corte-de-dia.yaml  crash-screen.yaml  director-home.yaml  director-to-ventas.yaml  egreso-gasto.yaml  egreso-inventario.yaml  egreso-nomina.yaml  egreso-recurrente.yaml  exportar-datos.yaml  informe-mensual.yaml  inventario-barcode.yaml  inventario-producto.yaml  inventario-salida.yaml  lan-pair.yaml  notificaciones-stock-bajo.yaml  smoke-launch.yaml  venta-credito.yaml  venta-efectivo.yaml  wizard-cloud-solo.yaml  wizard-help-modal.yaml  wizard-local-standalone.yaml  wizard-mobile-disabled-host.yaml  wizard-rerun-with-data.yaml
apps/mobile/maestro/scripts/: fresh-install.sh
apps/mobile/scripts/: bundle-check.sh
apps/mobile/src/app/: _layout.tsx  clientes.tsx  cuentas-por-cobrar.tsx  egresos.tsx  estados.tsx  index.tsx  inventario.tsx  productos.tsx  role-picker.tsx  settings.tsx  ventas.tsx  wizard.tsx
apps/mobile/src/shell/: app-shell-wrapper.tsx  clientes-slots.tsx  cloud-navigation.tsx  egresos-slots.tsx  i18n.ts  inventario-slots.tsx  load-cloud-db.ts  scanner-host.tsx  tamagui-provider.tsx  use-active-tab-key.ts  use-cloud-bridges.ts  use-cloud-handle.ts  use-lan-bridges.ts  use-swipe-state.ts  use-update-adapter.ts  ventas-slots.tsx
apps/mobile/tests/shell/: use-active-tab-key.test.ts  use-cloud-handle.test.ts  (+1 more)
assets/brand/: README.md
docs/: launch-checklist.md
docs/beta/: play-internal-setup.md  testflight-setup.md
docs/landing/: index.html
docs/launch/: announcement.md
docs/legal/: privacy.md  terms.md
docs/store/: listing-app-store.md  listing-play-store.md
docs/store/screenshots/: README.md
scripts/: audit-screenshots.mjs  build-all.sh  measure-cold-start.ts  pad-icon.py  take-store-screenshots.ts
supabase/: README.md
supabase/migrations/: 0001_schema.sql
supabase/tests/: rls.spec.sql  ulid.spec.sql
(+10 files in other folders)
